--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,6 +1,6 @@
 NAME = philo
 CC = cc
-CFLAGS = -Werror -Wall -Wextra
+CFLAGS = -Werror -Wall -Wextra -g3
 HEADER = philosophers.h
 
 SRCS = parsing.c philo_routine.c philo_mouv.c utils.c error.c init.c main.c
